--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 
-@import "main";
+
 @import "media";
+@import "main";
 
 // colors ==============================================================================
 $cl1: #EF2779;
@@ -12,7 +13,9 @@ $cl-bg: #252B42;
 
 
 
-
+* {
+   box-sizing: border-box;
+}
 body {
    font-family: 'Roboto', sans-serif;
    color: $cl-text2;
