--- a/css/style.css
+++ b/css/style.css
@@ -421,9 +421,9 @@ h1 {
           flex: 0 0 55%;
   height: 80%;
   text-align: center;
-  background-image: url(../img/screen2.webp);
-  background-size: cover;
-  background-position: center right;
+  background-image: url(../img/screen3.jpg);
+  background-size: contain;
+  background-position: center left;
   background-repeat: no-repeat;
   overflow: hidden;
 }
